[tool.poetry]
name = "pism-ragis"
version = "0.1.0"
description = ""
authors = ["Andy Aschwanden <andy.aschwanden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.urls]

[peotry.project.urls]

"homepage" = "https://github.com/pism/pism-ragis"
"repository" = "https://github.com/pism/pism-ragis"
"bug tracker" = "https://github.com/pism/pism-ragis/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]

homepage = "https://github.com/pism/pism-ragis"
repository = "https://github.com/pism/pism-ragis"

[project]
name = "pismragis"
version = "0.1"
maintainers = [{name = "Andy Aschwanden", email = "andy.aschwanden@gmail.com"}]
description = """Home of NASA ROSES project "A Reanalysis of the Greenland Ice Sheet"""
readme = "README.md"
requires-python = "^3.8"
license = {text = "GPL 3.0"}
classifiers = [
        "License :: OSI Approved :: Apache Software License",
        "Natural Language :: English",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.10",
        "Topic :: Scientific/Engineering :: Postprocessing",
        ]

[tool.flake8]
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = """
    E203,
    E501,
    W503,
    W605,
    C901,
    F841,
    E722,
    E402,
    F722,
    """
# Max width of Github code review is 119 characters
max-line-length = 119
max-complexity = 18
exclude = [
    ".tox",
    ".git",
    "*/migrations/*",
    ".mypy_cache",
    ".pytest_cache",
    "*__init__.py",
    "venv"
    ]

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 88

[tool.pycodestyle]
max-line-length = 119
exclude = [
    ".tox",
    ".git",
    "*/migrations/*",
    ".mypy_cache",
    ".pytest_cache",
    "*__init__.py",
    "venv"
    ]

[tool.mypy]
python_version = 3.10
check_untyped_defs = "True"
ignore_missing_imports = "True"
warn_unused_ignores = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
      \.eggs
    | \.git
    | \.mypy_cache
    | _build
    | conda
    | docs
 )/
'''
